force-app/main/default/objects/Product2/fields/Amount_categories__c.field-meta.xml
<CustomField>
    <fullName>Amount_categories__c</fullName>
    <label>Amount Categories</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Capital</fullName>
            </value>
            <value>
                <fullName>Consumable</fullName>
            </value>
            <value>
                <fullName>Warranty/Service</fullName>
            </value>
            <value>
                <fullName>Instrument Kits</fullName>
            </value>
            <value>
                <fullName>Disposables</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>