force-app/main/default/objects/Product2/fields/CAN_Cost__c.field-meta.xml
<CustomField>
    <fullName>CAN_Cost__c</fullName>
    <label>CAN Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>