force-app/main/default/objects/Product2/fields/CAN_List__c.field-meta.xml
<CustomField>
    <fullName>CAN_List__c</fullName>
    <label>CAN List</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>