force-app/main/default/objects/Product2/fields/Category_A__c.field-meta.xml
<CustomField>
    <fullName>Category_A__c</fullName>
    <label>Category A</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Digital Restorative</fullName>
            </value>
            <value>
                <fullName>Implants</fullName>
            </value>
            <value>
                <fullName>Regenerative</fullName>
            </value>
            <value>
                <fullName>Std Restorative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>