force-app/main/default/objects/Product2/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Company</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>B3i</fullName>
            </value>
            <value>
                <fullName>ZD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>