force-app/main/default/objects/Product2/fields/Euro_Cost__c.field-meta.xml
<CustomField>
    <fullName>Euro_Cost__c</fullName>
    <label>EURO Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>