force-app/main/default/objects/Product2/fields/EURO_List__c.field-meta.xml
<CustomField>
    <fullName>EURO_List__c</fullName>
    <label>EURO List</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>