force-app/main/default/objects/Product2/fields/External_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Product_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External Product ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>