force-app/main/default/objects/Product2/fields/France_List__c.field-meta.xml
<CustomField>
    <fullName>France_List__c</fullName>
    <label>France List</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>