force-app/main/default/objects/Product2/fields/Germany_List__c.field-meta.xml
<CustomField>
    <fullName>Germany_List__c</fullName>
    <label>Germany List</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>