force-app/main/default/objects/Product2/fields/List_Price__c.field-meta.xml
<CustomField>
    <fullName>List_Price__c</fullName>
    <description>This is a new field as requested by the EBridge implementation.</description>
    <label>List Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>