force-app/main/default/objects/Product2/fields/Name_English__c.field-meta.xml
<CustomField>
    <fullName>Name_English__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Produktname Englisch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>