force-app/main/default/objects/Product2/fields/Name_French__c.field-meta.xml
<CustomField>
    <fullName>Name_French__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Produktname Französisch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>