force-app/main/default/objects/Product2/fields/Productsegment__c.field-meta.xml
<CustomField>
    <fullName>Productsegment__c</fullName>
    <label>Produktsegment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>J</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>O</fullName>
            </value>
            <value>
                <fullName>Q</fullName>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>Z</fullName>
            </value>
            <value>
                <fullName>&lt;nicht definiert&gt;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>