force-app/main/default/objects/Product2/fields/Productsegment_Shorttext__c.field-meta.xml
<CustomField>
    <fullName>Productsegment_Shorttext__c</fullName>
    <label>Produktsegment Kurztext</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Extremities Franchise</fullName>
            </value>
            <value>
                <fullName>Knees</fullName>
            </value>
            <value>
                <fullName>Spine</fullName>
            </value>
            <value>
                <fullName>Hips</fullName>
            </value>
            <value>
                <fullName>Trauma</fullName>
            </value>
            <value>
                <fullName>Patient Care</fullName>
            </value>
            <value>
                <fullName>Linvatec</fullName>
            </value>
            <value>
                <fullName>&lt;nicht definiert&gt;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>