force-app/main/default/objects/Product2/fields/Productsubgroup__c.field-meta.xml
<CustomField>
    <fullName>Productsubgroup__c</fullName>
    <label>Produktuntergruppe</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0020</fullName>
            </value>
            <value>
                <fullName>0021</fullName>
            </value>
            <value>
                <fullName>0022</fullName>
            </value>
            <value>
                <fullName>0025</fullName>
            </value>
            <value>
                <fullName>6001</fullName>
            </value>
            <value>
                <fullName>6002</fullName>
            </value>
            <value>
                <fullName>6005</fullName>
            </value>
            <value>
                <fullName>6009</fullName>
            </value>
            <value>
                <fullName>7005</fullName>
            </value>
            <value>
                <fullName>7006</fullName>
            </value>
            <value>
                <fullName>7007</fullName>
            </value>
            <value>
                <fullName>7008</fullName>
            </value>
            <value>
                <fullName>7015</fullName>
            </value>
            <value>
                <fullName>7020</fullName>
            </value>
            <value>
                <fullName>7021</fullName>
            </value>
            <value>
                <fullName>7022</fullName>
            </value>
            <value>
                <fullName>7024</fullName>
            </value>
            <value>
                <fullName>7027</fullName>
            </value>
            <value>
                <fullName>7028</fullName>
            </value>
            <value>
                <fullName>7032</fullName>
            </value>
            <value>
                <fullName>7033</fullName>
            </value>
            <value>
                <fullName>7034</fullName>
            </value>
            <value>
                <fullName>7049</fullName>
            </value>
            <value>
                <fullName>7051</fullName>
            </value>
            <value>
                <fullName>7052</fullName>
            </value>
            <value>
                <fullName>7053</fullName>
            </value>
            <value>
                <fullName>7054</fullName>
            </value>
            <value>
                <fullName>7055</fullName>
            </value>
            <value>
                <fullName>7056</fullName>
            </value>
            <value>
                <fullName>7057</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>