force-app/main/default/objects/Product2/fields/Productsubgroup_Shorttext__c.field-meta.xml
<CustomField>
    <fullName>Productsubgroup_Shorttext__c</fullName>
    <label>Produktuntergruppe Kurztext</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hip Service Revenue</fullName>
            </value>
            <value>
                <fullName>Knee Service Revenue</fullName>
            </value>
            <value>
                <fullName>FMD Service Revenue</fullName>
            </value>
            <value>
                <fullName>Extremities Service Revenue</fullName>
            </value>
            <value>
                <fullName>CEP Hips (inactive)</fullName>
            </value>
            <value>
                <fullName>CEP Knees (inactive)</fullName>
            </value>
            <value>
                <fullName>CEP Spine (inactive)</fullName>
            </value>
            <value>
                <fullName>CEP Patient Care (inactive)</fullName>
            </value>
            <value>
                <fullName>Trabecular Metal Modular Cups</fullName>
            </value>
            <value>
                <fullName>Trabecular Acetabular Augment Cups</fullName>
            </value>
            <value>
                <fullName>Precimed Reamers</fullName>
            </value>
            <value>
                <fullName>Ex-Plant Instrument</fullName>
            </value>
            <value>
                <fullName>Molded CR NexGen Articular Surface</fullName>
            </value>
            <value>
                <fullName>LPS Fixed-Molded NexGen Articular Surface</fullName>
            </value>
            <value>
                <fullName>LCCK NexGen Articular Surface</fullName>
            </value>
            <value>
                <fullName>Rotating Hinge Articular Surface</fullName>
            </value>
            <value>
                <fullName>Rotating Hinge Tibial Plate</fullName>
            </value>
            <value>
                <fullName>TM CR Monoblock Tibial</fullName>
            </value>
            <value>
                <fullName>TM LPS Monoblock Tibial</fullName>
            </value>
            <value>
                <fullName>NexGen Augmentation Patella</fullName>
            </value>
            <value>
                <fullName>Continuum Augmentation Patella</fullName>
            </value>
            <value>
                <fullName>NexGen Stems, Augments</fullName>
            </value>
            <value>
                <fullName>Pressure Sentinel Reamers</fullName>
            </value>
            <value>
                <fullName>Cables</fullName>
            </value>
            <value>
                <fullName>GTR</fullName>
            </value>
            <value>
                <fullName>Cable Pin</fullName>
            </value>
            <value>
                <fullName>Cable Plates</fullName>
            </value>
            <value>
                <fullName>Luque Wires</fullName>
            </value>
            <value>
                <fullName>Periarticular Plates - Tibia</fullName>
            </value>
            <value>
                <fullName>Periarticular Plates - Femur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>