force-app/main/default/objects/Product2/fields/Quantity_Available__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Available__c</fullName>
    <description>This is the quantity of the item available in the warehouse ( quantity on hold - quantity committed ).</description>
    <formula>Quantity_On_Hand__c - Quantity_Committed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity Available</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>