force-app/main/default/objects/Product2/fields/Quantity_Committed__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Committed__c</fullName>
    <label>Quantity Committed</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>