force-app/main/default/objects/Product2/fields/Quantity_On_Hand__c.field-meta.xml
<CustomField>
    <fullName>Quantity_On_Hand__c</fullName>
    <label>Quantity On Hand</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>