force-app/main/default/objects/Product2/fields/RequestUpdate__c.field-meta.xml
<CustomField>
    <fullName>RequestUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request Update</label>
    <type>Checkbox</type>
</CustomField>