force-app/main/default/objects/Product2/fields/SAP_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>SAP_Product_ID__c</fullName>
    <description>Referenznummer für Pervasive Business Integrator</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>SAP Produkt-Nr.</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>