force-app/main/default/objects/Product2/fields/SearchTerm__c.field-meta.xml
<CustomField>
    <fullName>SearchTerm__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Search Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>