force-app/main/default/objects/Product2/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accelero</fullName>
            </value>
            <value>
                <fullName>Biologics</fullName>
            </value>
            <value>
                <fullName>Bone Cement</fullName>
            </value>
            <value>
                <fullName>CAS</fullName>
            </value>
            <value>
                <fullName>Cement</fullName>
            </value>
            <value>
                <fullName>CMF &amp; Thoracic</fullName>
            </value>
            <value>
                <fullName>Dental</fullName>
            </value>
            <value>
                <fullName>Extremities</fullName>
            </value>
            <value>
                <fullName>Foot &amp; Ankle</fullName>
            </value>
            <value>
                <fullName>Hip Preservation</fullName>
            </value>
            <value>
                <fullName>Hips</fullName>
            </value>
            <value>
                <fullName>Infection</fullName>
            </value>
            <value>
                <fullName>Knees</fullName>
            </value>
            <value>
                <fullName>mymobility</fullName>
            </value>
            <value>
                <fullName>OBT</fullName>
            </value>
            <value>
                <fullName>OSP</fullName>
            </value>
            <value>
                <fullName>Personalized Solution</fullName>
            </value>
            <value>
                <fullName>PMI</fullName>
            </value>
            <value>
                <fullName>Robotics</fullName>
            </value>
            <value>
                <fullName>ROSA</fullName>
            </value>
            <value>
                <fullName>ROSA Brain</fullName>
            </value>
            <value>
                <fullName>Spine</fullName>
            </value>
            <value>
                <fullName>Sports Medicine</fullName>
            </value>
            <value>
                <fullName>Surgical</fullName>
            </value>
            <value>
                <fullName>Trauma</fullName>
            </value>
            <value>
                <fullName>ZB Connect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>