force-app/main/default/objects/Product2/fields/Sell_Price03__c.field-meta.xml
<CustomField>
    <fullName>Sell_Price03__c</fullName>
    <label>Sell_Price03</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>