force-app/main/default/objects/Product2/fields/Sub_Segment__c.field-meta.xml
<CustomField>
    <fullName>Sub_Segment__c</fullName>
    <label>Sub-Segment</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Segment__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accessories</fullName>
            </value>
            <value>
                <fullName>AC Joint Reconstruction/Reduction</fullName>
            </value>
            <value>
                <fullName>Alloclassic SL</fullName>
            </value>
            <value>
                <fullName>ALPS</fullName>
            </value>
            <value>
                <fullName>Ankle</fullName>
            </value>
            <value>
                <fullName>Avenir Complete Stem</fullName>
            </value>
            <value>
                <fullName>Biologics</fullName>
            </value>
            <value>
                <fullName>Bipolar Head</fullName>
            </value>
            <value>
                <fullName>Blood Management</fullName>
            </value>
            <value>
                <fullName>Bone Cement &amp; Accessories</fullName>
            </value>
            <value>
                <fullName>Bone Stimulation</fullName>
            </value>
            <value>
                <fullName>C+TBA</fullName>
            </value>
            <value>
                <fullName>Cable Products</fullName>
            </value>
            <value>
                <fullName>Capital</fullName>
            </value>
            <value>
                <fullName>Cervical</fullName>
            </value>
            <value>
                <fullName>Cervical Cages</fullName>
            </value>
            <value>
                <fullName>Dental</fullName>
            </value>
            <value>
                <fullName>Dynamic Stabilisation</fullName>
            </value>
            <value>
                <fullName>Early Intervention</fullName>
            </value>
            <value>
                <fullName>Early Intervention Knee</fullName>
            </value>
            <value>
                <fullName>Elbow</fullName>
            </value>
            <value>
                <fullName>External Fixation</fullName>
            </value>
            <value>
                <fullName>Extremities</fullName>
            </value>
            <value>
                <fullName>FastFrame</fullName>
            </value>
            <value>
                <fullName>Fluid Waste Management</fullName>
            </value>
            <value>
                <fullName>Fluid Waste Management - Capital</fullName>
            </value>
            <value>
                <fullName>Fluid Waste Management - Consumables</fullName>
            </value>
            <value>
                <fullName>Foot and Ankle Biologics</fullName>
            </value>
            <value>
                <fullName>Forefoot</fullName>
            </value>
            <value>
                <fullName>Gender Solutions PFJ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>