force-app/main/default/objects/Product2/fields/Sync_ID__c.field-meta.xml
<CustomField>
    <fullName>Sync_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Sync ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>