force-app/main/default/objects/Product2/fields/Unit_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_Measure__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UoM</label>
    <length>10</length>
    <type>Text</type>
</CustomField>