force-app/main/default/objects/Product2/fields/Units_Per_Package__c.field-meta.xml
<CustomField>
    <fullName>Units_Per_Package__c</fullName>
    <label>Units Per Package</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>