force-app/main/default/objects/Product2/fields/USA_List__c.field-meta.xml
<CustomField>
    <fullName>USA_List__c</fullName>
    <label>USA List</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>