force-app/main/default/objects/Product2/recordTypes/ASC.recordType-meta.xml
<RecordType>
    <fullName>ASC</fullName>
    <active>true</active>
    <description>Product record type for the ASC team.</description>
    <label>ASC</label>
</RecordType>