force-app/main/default/objects/Product2/recordTypes/DN_US_Product_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>DN_US_Product_Record_Type</fullName>
    <active>true</active>
    <label>DN-US-Product Record Type</label>
</RecordType>