force-app/main/default/objects/Product2/recordTypes/Enterprise.recordType-meta.xml
<RecordType>
    <fullName>Enterprise</fullName>
    <active>true</active>
    <description>Record type used for price scheduling for the Enterprise Solutions team.</description>
    <label>Enterprise</label>
</RecordType>