force-app/main/default/objects/Product2/recordTypes/EU_Product.recordType-meta.xml
<RecordType>
    <fullName>EU_Product</fullName>
    <active>true</active>
    <description>Product Record Type for EU</description>
    <label>EU-Product</label>
</RecordType>