force-app/main/default/objects/Product2/recordTypes/Global_Product.recordType-meta.xml
<RecordType>
    <fullName>Global_Product</fullName>
    <active>true</active>
    <description>Global Product Record type</description>
    <label>Global Product</label>
</RecordType>