force-app/main/default/objects/Product2/recordTypes/Master_Product.recordType-meta.xml
<RecordType>
    <fullName>Master_Product</fullName>
    <active>true</active>
    <description>Master Products for Integration and Reporting</description>
    <label>Master Product</label>
</RecordType>