force-app/main/default/objects/Product2/recordTypes/SAPProdukt.recordType-meta.xml
<RecordType>
    <fullName>SAPProdukt</fullName>
    <active>true</active>
    <description>aus SAP R/3 importiertes Produkt</description>
    <label>EU-SAP Produkt</label>
</RecordType>