force-app/main/default/objects/Product2/listViews/AM_US_Surgical_Products.listView-meta.xml
<ListView>
    <fullName>AM_US_Surgical_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>Segment__c</columns>
    <columns>Sub_Segment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.RECORD_TYPE</field>
        <operation>equals</operation>
        <value>Product2.Global_Product</value>
    </filters>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Surgical</value>
    </filters>
    <label>AM-US-Surgical Products</label>
    <sharedTo>
        <group>TCS_SFDC_Admins</group>
    </sharedTo>
</ListView>