force-app/main/default/objects/Product2/listViews/Global_Pipeline_Products.listView-meta.xml
<ListView>
    <fullName>Global_Pipeline_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.RECORD_TYPE</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.RECORD_TYPE</field>
        <operation>equals</operation>
        <value>Product2.DN_CA_Product_Record_Type,Product2.DN_US_Product_Record_Type</value>
    </filters>
    <label>Global Pipeline Products</label>
    <sharedTo>
        <group>Administrators</group>
    </sharedTo>
</ListView>