force-app/main/default/objects/Product2/listViews/Master_Products_Surgical.listView-meta.xml
<ListView>
    <fullName>Master_Products_Surgical</fullName>
    <columns>PRODUCT2.RECORD_TYPE</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>Category_A__c</columns>
    <columns>USA_List__c</columns>
    <columns>Sub_Segment__c</columns>
    <columns>Product_Id__c</columns>
    <columns>Amount_categories__c</columns>
    <columns>CAN_List__c</columns>
    <columns>France_List__c</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Segment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.NAME</field>
        <operation>contains</operation>
        <value>Helmet</value>
    </filters>
    <label>Master Products - Surgical</label>
</ListView>